[Mac][Material Design] Change bookmark chevron icon size to 8x8.

The chevron icon is currently 16x16, which is larger than it should be.

R=avi@chromium.org
BUG=612615

Review-Url: https://codereview.chromium.org/1989953002
Cr-Commit-Position: refs/heads/master@{#394482}

Former-commit-id: d77c14d86100cbf91869f78ab6361eab56de1ca6